# ReMPI

./: .gitmodules  .travis.yml  LICENSE.TXT  Makefile  Makefile-bgq-gnu  Makefile-bgq-gnu.config  Makefile.am  Makefile.config  Makefile.in  README.md  TODO  autoclean.sh  autogen.sh  buildlib.sh  cleanup.sh  configure  configure.ac  rempi.c  rempi_event_list.cpp  rempi_mutex.cpp  rempi_mutex.h  rempi_record_thread.cpp  rempi_translator.h
buildme_example/: buildme_bgq-gnu.sh  buildme_x86-64.sh  buildme_x86-64_paradis.sh  buildme_x86-64_qs.sh
example/: Makefile  Makefile.am  example1.c  example1.sh  example_x86.sh.in  examplex_x86.sh.in  run.sh  test.C
io-watchdog/: ReMPI  kill_sigusr2.sh
scripts/: Makefile.am  Makefile.in  list_mpi_functions.sh  rempi.in  rempi_record.in  rempi_replay.in  stm.py
src/: Communicator.h  Makefile  Makefile-bgq-gnu  Makefile.am  Makefile.in  Request.h  Wrappers.h  getFortranConstants.f  rempi.c  rempi.c.20141113  rempi.cpp  rempi_clock.cpp  rempi_clock.h  rempi_clock_delta_compression.cpp  rempi_clock_delta_compression.h  rempi_compress.cpp  rempi_compress.h  rempi_compression_util.cpp  rempi_compression_util.h  rempi_config.c  rempi_config.cpp  rempi_config.h  rempi_cp.cpp  rempi_cp.h  rempi_encoder.cpp  rempi_encoder.h  rempi_encoder_basic.cpp  rempi_encoder_cdc.cpp  rempi_encoder_cdc_permutation_diff.cpp  rempi_encoder_cdc_row_wise_diff.cpp  rempi_encoder_rep.cpp  rempi_encoder_simple_zlib.cpp  rempi_encoder_zlib.cpp  rempi_err.cpp  rempi_err.h  rempi_event.cpp  rempi_event.h  rempi_event_list.cpp  rempi_event_list.cpp.20141110  rempi_event_list.h  (+50 more)
src/llvm/: Makefile.am  kmp.h  kmp_os.h  mutil.cpp  mutil.h  reomp.cpp  reomp.h  reomp_IR_pass.cpp  reomp_IR_pass.h  reomp_config.cpp  reomp_config.h  reomp_drace.cpp  reomp_drace.h  reomp_gate.cpp  reomp_gate.h  reomp_gate_clock.cpp  reomp_gate_clock.h  reomp_gate_tid.cpp  reomp_ir_pass.cpp  reomp_ir_pass.h  reomp_mem.cpp  reomp_mem.h  reomp_omp_wrapper.cpp  reomp_profile.cpp  reomp_profile.h  reomp_rr.cpp  reomp_rr.h  reomp_rr_clock.h
src/mpi/: rempi_clock.h  rempi_compress.cpp  rempi_compression_util.h  rempi_config.cpp  rempi_cp.h  rempi_encoder.h  rempi_encoder_basic.cpp  rempi_encoder_cdc_row_wise_diff.cpp  rempi_event_list.cpp  rempi_event_list.h  rempi_io_thread.cpp  rempi_io_thread.h  rempi_mpi_init.cpp  rempi_pmpi.cpp  rempi_re.cpp  rempi_re.h  rempi_request_mg.cpp  rempi_sig_handler.cpp  rempi_thread.cpp  rempi_translator.h
src/rempi/: Makefile.am  rempi_config.cpp  rempi_encoder_cdc.cpp  rempi_encoder_zlib.cpp  rempi_err.cpp  rempi_err.h  rempi_fortran.f90  rempi_io_thread.cpp  rempi_mem.h  rempi_message_manager.h  rempi_msg_buffer.h  rempi_pmpi.cpp  rempi_re.cpp  rempi_spsc_queue.h  rempi_status.cpp  rempi_type.h  rempi_util.cpp
src/reomp/: Makefile.am  mutil.cpp  mutil.h  reomp.cpp  reomp.h  reomp_config.cpp  reomp_drace.cpp  reomp_err.cpp  reomp_gate_clock.cpp  reomp_gate_tid.h  reomp_ir_pass.cpp  reomp_mem.cpp  reomp_mon.cpp  reomp_mon.h  reomp_omp_wrapper.h  reomp_profile.cpp  reomp_profile.h
test/: .io-watchdogrc  Makefile  Makefile-bgq-gnu  Makefile.am  Makefile.config  Makefile.in  README.md  example.sh  msub.sh  regression_test.sh  regression_test_lite.sh  regression_test_unit.sh  regression_test_x86.sh  regression_testx_x86.sh  rempi_test.c  rempi_test_clmpi.c  rempi_test_compress.cpp  rempi_test_hypre_parasails.c  rempi_test_isendrecv.c  rempi_test_master_worker.c  rempi_test_master_worker_fortran.f  rempi_test_master_worker_fortran.f90  rempi_test_mini_mcb.c  rempi_test_msg_race.c  rempi_test_neighbor-2.c  rempi_test_neighbor-collective.c  rempi_test_neighbor-send.c  rempi_test_neighbor-tree.c  rempi_test_neighbor.c  rempi_test_units.c  rempi_test_units_fortran.f90  rempi_test_util.c  rempi_test_util.h  rempi_unit_test.sh  reomp_test.sh  reomp_test_units.cpp  run.example  run.sh  test-bgq.sh  test.sh
test/rempi/: Makefile.am  build_mcb-bgq.sh  regression_test_x86.sh  rempi_test_hypre_parasails.c  rempi_test_isendrecv.c  rempi_test_master_worker.c  rempi_test_master_worker_fortran.f90  rempi_test_mini_mcb.c  rempi_test_units_fortran.f90  test-bgq.sh  test-mcb.sh  test_tv.sh
test/reomp/: Makefile.am  build_reomp_example.sh  build_run_reomp_example.sh  reomp_example.cpp  reomp_test_units.cpp  run_reomp.sh  run_reomps.sh
travis-test/: run-all.sh  test.sh  update-mpi.sh
